RESOLVED FIXED Bug 229950
webgl/2.0.y/deqp/functional/gles3/rbostatequery.html fails on Metal
https://bugs.webkit.org/show_bug.cgi?id=229950
Summary webgl/2.0.y/deqp/functional/gles3/rbostatequery.html fails on Metal
Kimmo Kinnunen
Reported 2021-09-06 02:26:12 PDT
This test runs the WebGL Test listed below in an iframe and reports PASS or FAIL. Test: ../../../../resources/webgl_test_files/deqp/functional/gles3/rbostatequery.html?webglVersion=2 [ 1: PASS ] rbo.renderbuffer_size: Passed [ 2: PASS ] rbo.renderbuffer_internal_format: Passed [ 3: PASS ] rbo.renderbuffer_component_size_color: Passed [ 4: PASS ] rbo.renderbuffer_component_size_depth: Passed [ 5: FAIL ] rbo.renderbuffer_samples: Expected greater or equal to 1 got 0 [ 6: PASS ] successfullyParsed is true [ FAIL ] 1 failures reported
Attachments
Patch (3.75 KB, patch)
2021-09-07 03:56 PDT, Kimmo Kinnunen
no flags
Patch (4.84 KB, patch)
2021-09-07 04:23 PDT, Kimmo Kinnunen
no flags
Patch for landing (4.69 KB, patch)
2021-09-07 23:46 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-09-07 03:56:10 PDT
Kimmo Kinnunen
Comment 2 2021-09-07 04:23:55 PDT
Kimmo Kinnunen
Comment 3 2021-09-07 23:46:37 PDT
Created attachment 437600 [details] Patch for landing
EWS
Comment 4 2021-09-08 00:39:48 PDT
Committed r282132 (241429@main): <https://commits.webkit.org/241429@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437600 [details].
Radar WebKit Bug Importer
Comment 5 2021-09-08 00:40:33 PDT
Note You need to log in before you can comment on or make changes to this bug.